--- a/catws_tf/src/tftest/CMakeLists.txt
+++ b/catws_tf/src/tftest/CMakeLists.txt
@@ -135,6 +135,7 @@ include_directories(
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/tftest_node.cpp)
 add_executable(turtle_tf_broadcaster src/turtle_tf_broadcaster.cpp)
+add_executable(turtle_tf_listener src/turtle_tf_listener.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -151,6 +152,7 @@ add_executable(turtle_tf_broadcaster src/turtle_tf_broadcaster.cpp)
 #   ${catkin_LIBRARIES}
 # )
 target_link_libraries(turtle_tf_broadcaster ${catkin_LIBRARIES})
+target_link_libraries(turtle_tf_listener ${catkin_LIBRARIES})
 
 #############
 ## Install ##
